--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-JITLine/data/openstack_test.pkl
-JITLine/data/openstack_train.pkl
-JITLine/data/qt_test.pkl
-JITLine/data/qt_train.pkl
-JITLine/final_model/openstack_LIME_RF_DE_SMOTE_min_df_3.pkl
-JITLine/final_model/qt_LIME_RF_DE_SMOTE_min_df_3.pkl
+JITLine/data/*_test.pkl
+JITLine/data/*_train.pkl
+JITLine/data/*_dict.pkl
+JITLine/final_model/*.pkl
+venv/
+__pycache__
